tests/compile_fail/label_underscore_ident.rs
#[skuld::label]
const _: skuld::Label;

fn main() {}
